# keyboard_tool

./: .gitignore  CMakeLists.txt  README.md  install.bat  install.sh  kbdtConfig.cmake.in
cmake/: kbdtConfig.cmake.in
cmake/templates/: config.h.in
doc/: README_CN.md  README_EN.md  README_ZH.md
example/: CMakeLists.txt
example/echo/: CMakeLists.txt  main.c
example/quick_input_pi/: CMakeLists.txt  main.c
include/kbdt/: kbdt.h  utility.h  utils.h
msvc_pthread/: CMakeLists.txt
script/mac/: build-example.sh
script/windows/: build-example.bat
src/: kbdt.c  kbdt_private.h
src/linux/: base.c  base.h  container.c  container.h  def.c  def.h  defs.c  defs.h  event_converter.c  event_converter.h  kbdt_private.c  uinput_id.c  uinput_id.h  utility.c  utility.h  utils.c  utils.h
src/mac/: event_converter.c  event_converter.h  kbdt_private.c
src/utility/: utility.c  utility_linux.c  utility_mac.c  utility_win.c
src/utils/: utils.c  utils_linux.c  utils_mac.c  utils_win.c
src/win/: event_converter.c  event_converter.h  kbdt_private.c  message_id.c  message_id.h
